<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tvHowToUse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/howtouse" />

        <TextView
            android:id="@+id/tvUseTip1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tvHowToUse"
            android:layout_below="@+id/tvHowToUse"
            android:layout_marginLeft="23dp"
            android:layout_marginTop="16dp"
            android:text="@string/usertip1" />

        <TextView
            android:id="@+id/tvUserTip2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tvUseTip1"
            android:layout_below="@+id/tvUseTip1"
            android:text="@string/usertip2" />

        <TextView
            android:id="@+id/tvUserTip3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tvUserTip2"
            android:layout_below="@+id/tvUserTip2"
            android:text="@string/usertip3" />

        <TextView
            android:id="@+id/tvUserTip4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tvUserTip3"
            android:layout_below="@+id/tvUserTip3"
            android:text="@string/usertip4" />

        <TextView
            android:id="@+id/tvCannotConnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tvHowToUse"
            android:layout_below="@+id/tvUserTip4"
            android:layout_marginTop="14dp"
            android:text="@string/cannotconnect" />

        <TextView
            android:id="@+id/tvCannotConnect1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tvUserTip4"
            android:layout_below="@+id/tvCannotConnect"
            android:layout_marginTop="16dp"
            android:text="@string/cannottip1" />

        <TextView
            android:id="@+id/tvCannotConnect2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tvCannotConnect1"
            android:layout_below="@+id/tvCannotConnect1"
            android:text="@string/cannottip2"
            android:visibility="gone" />
    </RelativeLayout>

</ScrollView>